--- a/index.html
+++ b/index.html
@@ -842,6 +842,17 @@
           <div style="font-size:11px;color:var(--text-main);">Ask AIM about your FS</div>
           <div style="font-size:10px;color:var(--text-soft);">“Where is my data?” · “What is AIM?”</div>
         </div>
+        <div class="start-rec-item">
+          <h1>Power Options</h1>
+
+          <div onclick="window.close()">
+            Shutdown
+          </div>
+
+          <div onclick="location.reload()">
+            Restart
+          </div>
+        </div>
       </div>
     </div>
     <div class="start-footer">
