--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,9 @@
     <div class="ctx-item" data-action="openInNotepad"><span>Open in Notepad</span></div>
     <div class="ctx-item" data-action="openInBrowser"><span>Open in Browser</span></div>
     <div class="ctx-item" data-action="runExe"><span>Run (.exe in Host)</span></div>
-    <button class="ctx-item" onclick="window.location.href='https://github.com/alaricholt677/alaricholt677.github.io/tree/main';">
+    <button class="ctx-item" 
+    style="background: transparent;" 
+    onclick="window.location.href='https://github.com/alaricholt677/alaricholt677.github.io/tree/main';">
     <svg aria-hidden="true" height="16" viewBox="0 0 16 16" width="16">
     <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 
     6.53 5.47 7.59.4.07.55-.17.55-.38 
