--- a/index.html
+++ b/index.html
@@ -1220,9 +1220,9 @@
     <div class="ctx-item" data-action="openInBrowser"><span>Open in Browser</span></div>
     <div class="ctx-item" data-action="runExe"><span>Run (.exe in Host)</span></div>
     <button class="ctx-item" 
-    style="background: transparent;" 
+    style="background: transparent; color: white; border: none;" 
     onclick="window.location.href='https://github.com/alaricholt677/alaricholt677.github.io/tree/main';">
-    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" width="16">
+    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" width="16" style="fill:white;">
     <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 
     6.53 5.47 7.59.4.07.55-.17.55-.38 
     0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
