--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
             <div>Notepad</div>
             <div class="start-app-sub">View + edit text</div>
           </div>
-          <div class="start-app" data-app="notepad" data-app-name="notepad">
+          <div class="start-app" data-app="camera" data-app-name="camera">
             <div class="start-app-icon" style="background:linear-gradient(135deg,#ffcc66,#ff9966);"></div>
             <div>Camera</div>
             <div class="start-app-sub">Snap + Record</div>
