--- a/index.html
+++ b/index.html
@@ -1364,6 +1364,28 @@
     </div>
   </div>
 
+  <!-- Device Not Supported Popup -->
+  <div id="camera-popup-backdrop" style="display:none;">
+    <div id="camera-popup">
+      <div id="camera-popup-title">
+        <svg width="18" height="18" viewBox="0 0 64 64" style="vertical-align:middle;margin-right:6px;">
+          <circle cx="32" cy="32" r="30" fill="#ff4da6"/>
+          <rect x="28" y="16" width="8" height="24" fill="white"/>
+          <rect x="28" y="44" width="8" height="8" fill="white"/>
+        </svg>
+        Device Not Supported
+      </div>
+
+      <div id="camera-popup-body" style="font-size:12px;color:var(--text-soft);padding-top:6px;">
+        This device does not have a camera available or permission was denied.
+      </div>
+
+      <div id="camera-popup-buttons">
+        <button class="admin-btn primary" id="camera-popup-close">OK</button>
+     </div>
+    </div>
+  </div>
+
   <!-- Dev banner -->
   <div class="dev-banner" id="dev-banner">
     <img src="win12-icon.svg" alt="Win12 Icon" width="24" height="24">
@@ -1577,8 +1599,10 @@ button:hover{background:#1e293b;}
       const mediaFileInput = document.getElementById("media-file-input");
       const mediaSurface = document.getElementById("media-surface");
       const mediaFilename = document.getElementById("media-filename");
-
+      
+      // Desktop FS path
       let currentExplorerPath = "/desktop";
+      // Camera dependencies
       const preview = document.getElementById("camera-preview");
       const playback = document.getElementById("camera-playback");
       const startBtn = document.getElementById("camera-start");
@@ -1591,13 +1615,32 @@ button:hover{background:#1e293b;}
       let mediaRecorder;
       let recordedChunks = [];
       let stream;
+      // Popup elements for camera
+      const camPopupBackdrop = document.getElementById("camera-popup-backdrop");
+      const camPopupClose = document.getElementById("camera-popup-close");
 
+      // Show popup function
+      function showCameraUnsupportedPopup() {
+        camPopupBackdrop.style.display = "flex";
+      }
+
+      // Close popup
+      camPopupClose.addEventListener("click", () => {
+        camPopupBackdrop.style.display = "none";
+      });
+
+      // Modify Start Camera button logic
       startBtn.addEventListener("click", async () => {
         try {
           stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
           preview.srcObject = stream;
         } catch (err) {
           console.error("Camera init failed:", err);
+
+          // If device not found or blocked → show popup
+          if (err.name === "NotFoundError" || err.name === "NotAllowedError") {
+            showCameraUnsupportedPopup();
+          }
         }
       });
 
