--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+<meta charset="UTF-8" />
 <link rel="icon" type="image/svg+xml" href="win12-icon.svg">
 <title>Win12 Simulator – Browser OS</title>
 <meta name="description" content="A full Windows 12 style desktop simulator built in HTML, CSS, and JavaScript.">
@@ -2784,7 +2784,27 @@ button:hover{background:#1e293b;}
       initialSetup();
 
       console.log("%cWin12 AIM FS full ctx relic + Notes + Paint + Media","color:#4c8dff;font-size:14px;font-weight:bold;");
-      console.log("Explorer, Notepad, Browser, Host.exe, Regedit, Settings, AIM OS, Notes, Paint (canvas+open image), Media Player (video/audio/image), clock flyout, fullscreen windows, full context menus.");
+console.log(`%c
+■■■■   Win12 AIM OS — Relic Boot
+■■■■   FS • Notes • Paint • Media • Explorer • Notepad • Browser • Host.exe • Regedit • Settings • AIM OS • Widgets • Power
+■■■■   ───────────────────────────────────────────────────────────────────────────────
+■■■■   Loaded modules:
+       • Filesystem (AIM FS v3)
+       • Window Manager (WM12)
+       • Local AI Companion (AIM Core)
+       • Canvas Engine (Paint)
+       • Media Engine (Video/Audio/Image)
+       • Registry Emulator
+       • Host.exe Runtime
+       • Full Context Menus
+       • Win12 UI Shell
+       • Session Restore
+       • LocalStorage Persistence
+       • Boot Rituals + Shrine Mode
+
+       Win12 Simulator ready — AIM engaged.
+`, "background:#ff4da6;color:white;font-size:12px;line-height:1.4;padding:12px;border-radius:8px;");
+
     })();
   </script>
 </body>
