--- a/index.html
+++ b/index.html
@@ -2540,7 +2540,7 @@ Just ask anything and I’ll guide you`;
     return "Got it. I'm right here with you";
 
   if(/who.*made.*you/.test(lower))
-    return "Alaricholt677 — this AIM OS instance is local, handcrafted, by alaricholt677, but if you want to User. then head to https://github.com/alaricholt677/alaricholt677.github.io and then click the requests tab and compose a feature or post an issue and alaricholt677 will try to get to it but alaricholt677 alaricholt677 might not get to it for a while and you can be a aprt. and you are right now a part of it by using this site. Thx for using";
+    return "You did ${u.name} — this AIM OS instance is local, handcrafted, and part of your ritual. and thx alaricholt677 for making and coding me just open the ctx menu on desktop visit project and just goto requests and purpose a issue or feature to be apart of it like you are right now.";
 
   // -----------------------------
   // ORIGINAL SYSTEM RESPONSES
