--- a/index.html
+++ b/index.html
@@ -2540,7 +2540,7 @@ Just ask anything and I’ll guide you`;
     return "Got it. I'm right here with you";
 
   if(/who.*made.*you/.test(lower))
-    return "You did ${u.name} — this AIM OS instance is local, handcrafted, and part of your ritual. and thx alaricholt677 for making and coding me just open the ctx menu on desktop visit project and just goto requests and purpose a issue or feature to be apart of it like you are right now.";
+    return "You did — this AIM OS instance is local, handcrafted, and part of your ritual";
 
   // -----------------------------
   // ORIGINAL SYSTEM RESPONSES
@@ -2583,6 +2583,7 @@ Just ask anything and I’ll guide you`;
   // -----------------------------
   return "I hear you. I only know this relic — users, FS, notes, associations, .exe payloads, Paint, Media Player, AIM — but I’m here to talk about anything you want. If you want a full list of what I can do, type help";
 }
+
 
       function aiSendNow(){
         if(!aiInput) return;
