--- a/index.html
+++ b/index.html
@@ -1693,7 +1693,7 @@ button:hover{background:#1e293b;}
             fs:[
               { path:"/desktop", name:"Welcome.txt", type:"file", ext:".txt", content:"Hello from the Win12 AIM relic.\n\nThis is your desktop Welcome.txt file."},
               { path:"/desktop", name:"Readme.md", type:"file", ext:".md", content:"# Readme\n\nThis is a markdown file in /desktop."},
-              { path:"/desktop", name:"SampleApp.exe", type:"file", ext:".exe", exePayloadBase64 },
+              { path:"/desktop", name:"SampleApp.exe", type:"file", ext:".exe", content:"(Unsupported type or Binary)" },
               { path:"/documents", name:"Session.log", type:"file", ext:".log", content:"Session started.\nUser created.\nExplorer, Notepad, Browser, and Host.exe online."},
               { path:"/recommended-files", name:"Roadmap.txt", type:"file", ext:".txt", content:"Future ideas:\n- More exe payloads\n- FS folders\n- Richer AIM behaviors" }
             ],
